--- a/css/jp.css
+++ b/css/jp.css
@@ -99,7 +99,7 @@ img {
 }
 
 .mid-container {
-  background: url("img/top-view-photography-accesories-with-copy-space.jpg");
+  background: url("img/photography.jpg");
   background-size: cover;
   background-repeat: no-repeat;
   background-position: center center;
